# cupynumeric

./: .clang-format  .gitignore  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  LICENSE  NOTICE  README.md  _implemented.html  acknowledgments.html  cupynumeric_cpp.cmake  cupynumeric_python.cmake  faqs.html  genindex.html  index.html  install.py  installation.html  objects.inv  oss-licenses.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  switcher.json  test.py  versioneer.py
.github/: CODEOWNERS  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-gh-docs.yml  ci-gh-nightly-release.yml  ci-gh-release.yml  ci-gh-validate-legate-sha.yml  ci-gh.yml  ci.yml  gh-build-and-test.yml  gh-build-docs.yml  gh-test-with-slurm.yml  lint.yml  pr.yml  release-wheels.yml  renovate.yml  request-nvskills-ci.yml  require-labels.yml  skills-warning.yml  wheels-build.yml  wheels-mac.yml  wheels-test.yml
_sources/: faqs.rst.txt  index.rst.txt  installation.rst.txt  oss-licenses.rst.txt
_sources/api/: _bitgenerator.rst.txt  _grouped.rst.txt  _ndarray.rst.txt  array_api.rst.txt  broadcast.rst.txt  creation.rst.txt  indexing.rst.txt  linalg.rst.txt  manipulation.rst.txt  math.rst.txt  ndarray.rst.txt  random.rst.txt  set.rst.txt  settings.rst.txt  statistics.rst.txt
_sources/changes/: 2510.rst.txt  2512.rst.txt
_sources/developer/: building.rst.txt  testing.rst.txt
_sources/examples/: black_scholes.ipynb.txt  cholesky.ipynb.txt  compact_finite_difference.ipynb.txt  edge_detection.ipynb.txt  kmeans.ipynb.txt  newton_raphson_2d.ipynb.txt
_sources/user/: advanced.rst.txt  index.rst.txt  practices.rst.txt  task.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
api/: _bitgenerator.html  _generator.html  _grouped.html  _ndarray.html  array_api.html  binary.html  broadcast.html  classes.html  comparison.html  creation.html  datatype.html  fft.html  index.html  indexing.html  io.html  linalg.html  logic.html  manipulation.html  math.html  ndarray.html  random.html  routines.html  set.html  settings.html  sorting.html  statistics.html  window.html
changes/: 2509.html  2510.html  2511.html  2512.html  dev.html  index.html
cmake/: include_rapids.cmake  versions.json
conda/conda-build/: build.sh  conda_build_config.yaml  meta.yaml
continuous_integration/: requirements-build.txt
continuous_integration/scripts/: build  build_wheel_linux.bash  conda-dnld-utils  make-conda-env  test  test_wheel_linux.bash  test_wheel_mac.bash
cupynumeric/: __init__.py  _array_api.py  config.py  install_info.py.in  ndimage.py  patch.py  runtime.py  settings.py  types.py
cupynumeric/_array/: array.py  doctor.py  flags.py  thunk.py  util.py
cupynumeric/_dlpack/: __init__.py
cupynumeric/_lib/: __init__.py
cupynumeric/_module/: __init__.py  _unary_red_utils.py  array_api.py  array_delete.py  array_dimension.py  array_joining.py  array_rearrange.py  array_splitting.py  array_tiling.py  array_transpose.py  creation_data.py  creation_matrices.py  creation_ranges.py  creation_shape.py  indexing.py  io_numpy.py  linalg_mvp.py  logic_array_contents.py  logic_array_type.py  math_complex.py  math_misc.py  math_sum_prod_diff.py  sets_making.py  ssc_sorting.py  stats_avgs_vars.py  stats_histograms.py  stats_order.py  window.py
cupynumeric/_sphinxext/: _comparison_util.py  _gpu_support.py  implemented_index.py
cupynumeric/_thunk/: _advanced_indexing.py  _indexing_strategy.py  _sort.py  deferred.py  eager.py  thunk.py
cupynumeric/_ufunc/: comparison.py  trigonometric.py  ufunc.py
cupynumeric/_utils/: __init__.py  array.py  coverage.py  profiling.py  stack.py
cupynumeric/fft/: __init__.py  _bluestein.py  fft.py
cupynumeric/lib/: array_utils.py
cupynumeric/linalg/: __init__.py  _cholesky.py  _eigen.py  _qr.py  _solve.py  linalg.py
cupynumeric/ma/: _masked_array.py
cupynumeric/ndimage/: __init__.py  ndimage.py
cupynumeric/random/: __init__.py  _bitgenerator.py  _generator.py  _random.py
developer/: CONTRIBUTING.html  building.html  index.html  testing.html
docs/cupynumeric/: switcher.json
examples/: 15_Step_12.ipynb  benchmark.py  black_scholes.html  black_scholes.ipynb  black_scholes.py  black_scholes_greeks.py  cfd.py  cg.py  cholesky.html  cholesky.ipynb  cholesky.py  compact_finite_difference.html  compact_finite_difference.ipynb  edge_detection.html  edge_detection.ipynb  einsum.py  gemm.py  index.html  indexing_routines.py  jacobi.py  kmeans.html  kmeans.ipynb  kmeans.py  kmeans_slow.py  linreg.py  logreg.py  lstm_backward.py  lstm_forward.py  newton_raphson_2d.html  newton_raphson_2d.ipynb  qr.py  quantiles.py  richardson_lucy.py  scan.py  solve.py  sort.py  stencil.html  stencil.ipynb  stencil.py  svd.py  (+4 more)
examples/_benchmark/: __init__.py  format_dtype.py  get_numpy.py  harness.py  info.py  log_null.py  microbenchmark_info.py  microbenchmark_utilities.py  random_array.py  sizing.py  summarize.py  timer.py  use_rich.py
examples/dlpack/: distributed_interop.py  dlpack_interop.py  leaf_task_interop.py  multi_rank_interop.py  pointer_interop.py
examples/inline_task/: test_binary_ops.py  test_unary_ops.py
examples/microbenchmarks/: axis_sum_bench.py  batched_fft_bench.py  fast_advanced_indexing_bench.py  gemm_gemv_bench.py  general_astype_bench.py  general_indexing_bench.py  general_nanred_bench.py  general_random_bench.py  general_scalared_bench.py  indexing_opt_targets_bench.py  main.py  microbenchmark_utilities.py  solve_bench.py  sort_bench.py  stream_bench.py  sync_bench.py  take_put_bench.py  ufunc_bench.py
scripts/: api_compare.py  conda-build.sh  get_cupynumeric_dir.py  run_array_api_tests.py
scripts/hooks/: check_availability_boilerplate.py  check_marker_reason.py  enforce_boilerplate.py  marker_reason_baseline.txt
scripts/maint/: renovate.json5  renovate_update_legate_version.py
src/: env_defaults.h
src/cupynumeric/: arg.h  (+20 more)
tests/: README.md
user/: advanced.html  differences.html  doctor.html  index.html  practices.html  profiling_debugging.html  task.html  tutorial.html  usage.html
(+725 files in other folders)
