# SPDX-FileCopyrightText: Copyright (c) 2021-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: LicenseRef-NvidiaProprietary
#
# NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
# property and proprietary rights in and to this material, related
# documentation and any modifications thereto. Any use, reproduction,
# disclosure or distribution of this material and related documentation
# without an express license agreement from NVIDIA CORPORATION or
# its affiliates is strictly prohibited.

[build-system]
requires = [
    "wheel",
    "setuptools",
    "setuptools-scm[toml]",
    "scikit-build-core",
    "cython>=3.0.1",
    "rich",
]
build-backend = "scikit_build_core.build"

[project]
name = "nvidia-cupynumeric"
authors = [{name = "NVIDIA Corporation"}]
license = {text = "Apache-2.0"}
description = "cupynumeric - drop in replacement for numpy"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.22,!=2.1.0",
    "cffi",
    "opt_einsum",
    "legate==25.10.*,>=0.0.0a0",
    "cutensor-cu12>=2.0,<2.3.0.6; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
    "nvidia-cufft-cu12; sys_platform == 'linux'",
    "nvidia-cusolver-cu12; sys_platform == 'linux'",
    "nvidia-cusparse-cu12; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12; sys_platform == 'linux'",
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/nv-legate/cupynumeric"

[project.entry-points."cmake.prefix"]
cupynumeric = "cupynumeric"

[tool.scikit-build.cmake]
version = ">=3.26.4"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.sdist]
include = [
    "../../../../cupynumeric/_version.py",
]

[tool.setuptools_scm]
write_to = "cupynumeric/_version.py"
#root = "../../../../"


[tool.scikit-build.build]
verbose = true

[tool.scikit-build.logging]
level = "DEBUG"

[tool.scikit-build.wheel]
exclude = ["**.pyx", "**CMakeLists.txt", "**.pxd"]
install-dir = "cupynumeric"

[tool.scikit-build]
build-dir = "buildwheel"

[tool.scikit-build.wheel.packages]
"cupynumeric" = "../../../../cupynumeric"

[tool.cibuildwheel.macos]
before-build = "pip install --upgrade git+https://github.com/assignUser/delocate@fix-exclude"
repair-wheel-command = """delocate-wheel \
                          --exclude 'liblegate' \
                          --exclude 'librealm-legate' \
                          --exclude 'liblegion-legate' \
                          --exclude 'legate' \
                          --require-archs {delocate_archs} \
                          -w {dest_dir} -v {wheel}"""
