# Copyright (c) 2024, NVIDIA CORPORATION.

[versioneer]
VCS = git
style = pep440
versionfile_source = cupynumeric/_version.py
versionfile_build = cupynumeric/_version.py
tag_prefix = v
parentdir_prefix = cupynumeric-

[options]
packages = find:
install_requires =
    numpy>=1.22,!=2.1.0
    # TODO: Add rest of install dependencies
python_requires = >=3.11
